# fanorona

./: .gitignore  CMakeLists.txt  DOM_UI_SYSTEM.md  Makefile  README.md  UI_SYSTEM.md  check.sh  debug_segfault.sh  fix_strdup.sh  gdb_usage.txt  main.c  quick_analysis.sh  run.sh  test_strdup.sh  verify_memory_fix.sh
.github/instructions/: prompt.instructions.md
assets/: README.md
src/: config.c  config.h  main.c  types.h
src/ai/: ai.c  ai.h  gnn_inference.c  gnn_inference.h  markov.c  mcts.c  minimax.c  minimax.h
src/analyzer/: postgame.c  postgame.h
src/audio/: audio.c  audio.h
src/core/: config.c  config.h  core.c  core.h  sdl_init.c  sdl_init.h  timer.c  timer.h
src/engine/: fanorona.c  fanorona.h  game_state.c  game_state.h
src/event/: coordinate_utils.c  coordinate_utils.h  event.c  event.h  event_dispatcher.c  event_dispatcher.h  hitbox.c  hitbox.h
src/layer/: dirty_rect.c  dirty_rect.h  layer.c  layer.h  layer_manager.c  layer_manager.h  render_target.c  render_target.h
src/logic/: logic.h  mode.c  rules.c  rules.h
src/net/: network.c  network.h  p2p.c  p2p.h  protocol.c  protocol.h
src/pions/: pions.c  pions.h
src/plateau/: plateau.c  plateau.h
src/scene/: ai_scene.c  button_demo_scene.c  button_demo_scene.h  choice_scene.c  game_scene.c  home_scene.c  lobby_scene.c  menu_scene.c  net_start_scene.c  pieces_scene.c  player_list_scene.c  profile_scene.c  scene.c  scene.h  scene_manager.c  scene_registry.c  scene_registry.h  setting_scene.c  wiki_scene.c
src/scenes/: game_scene.c  menu_scene.c  scene.c  scene.h
src/serializer/: serializer.c  serializer.h
src/sound/: sound.c  sound.h
src/stats/: game_stats.c  game_stats.h
src/types/: plateau_types.c  (+1 more)
(+35 files in other folders)
